<resources>
    <string name="app_name">OnWork</string>

    <string name="title_sign_in">Sign in</string>
    <string name="title_sign_up">Sign up</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_delete_account">Delete account</string>
    <string name="title_sign_out">Sign out</string>
    <string name="title_on_going">On going</string>

    <string name="description_sign_in">Continue your experience by signing into your account.</string>
    <string name="description_sign_up">Start your experience by creating an account.</string>
    <string name="description_delete_account">After deleting your account, you won\'t be able to recover your account. So, choose wisely.</string>
    <string name="description_sign_out">Sign out of your account. You can sign in back at anytime.</string>

    <string name="hint_email">Email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_entry">Working on</string>
    <string name="hint_date_format">Date format</string>
    <string name="hint_start_time">Start</string>
    <string name="hint_end_time">End</string>

    <string name="button_sign_in">Sign in</string>
    <string name="button_create_account">Create an account</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_delete_account">Delete my account</string>
    <string name="button_sign_out">Sign out of my account</string>

    <string name="action_settings">Settings</string>
    <string name="action_delete_history">Delete history</string>

    <string name="label_start_time">Started at %1$s</string>

    <string name="success_sign_in">Authentication successful</string>
    <string name="success_sign_up">Your account is successfully created</string>
    <string name="success_delete_account">Your account is successfully deleted</string>
    <string name="success_delete_history">You\'ve successfully deleted all items</string>
    <string name="success_update_time_entry">You\'ve successfully updated %s</string>
    <string name="success_delete_time_entry">You\'ve successfully deleted %s</string>

    <string name="error_sign_in">Authentication failed</string>
    <string name="error_delete_account">User account couldn\'t be deleted. Please try again</string>
    <string name="error_update_date_format">Date format couldn\'t be updated. The default one is selected</string>
    <string name="error_input_email">Please fill in your email address</string>
    <string name="error_input_password">Please fill in your password</string>
    <string name="error_input_start_time">Please fill in a proper starting time</string>
    <string name="error_input_end_time">Please fill in a proper ending time</string>
    <string name="error_input_times_not_logic">Starting time should be before ending time</string>
    <string name="error_input_new_entry">Please fill in a value before starting the timer</string>

    <string name="confirm_delete_account">Are you really sure about deleting your account? You can\'t undo this action.</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_undo">Undo</string>
</resources>
